<resources>
    <string name="app_name">Moodrush</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_skip_sign_in">Skip</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <!-- Strings related to tutorial -->
    <string name="tutorial_question">Which describes more time has passed?</string>
    <string name="tutorial_instruction">Tap on your choice</string>
    <string name="acknowledgement_message">That\'s it\, just pick a side</string>
    <string name="start_quiz">let\'s Go</string>

    <string name="q1">Question One</string>
    <string name="q2">Question Two</string>
    <string name="q3">Question Three</string>
    <string name="q4">Question Four</string>
    <string name="q5">Question Five</string>
    <string name="q6">Question Six</string>
    <string name="q7">Question Seven</string>
    <string name="q8">Question Eight</string>
    <string name="q9">Question Nine</string>
    <string name="q10">Question Ten</string>
    <string name="q11">Question Eleven</string>
    <string name="q12">Question Twelve</string>
    <string name="q13">Question Thirteen</string>
    <string name="q14">Question Fourteen</string>
    <string name="q15">Question Fifteen</string>
    <string name="q16">Question Sixteen</string>
    <string name="q17">Question Seventeen</string>
    <string name="q18">Question Eighteen</string>
    <string name="q19">Question Nineteen</string>
    <string name="q20">Question Twenty</string>
    <string name="q21">Question Twentyone</string>

    <string name="prompt_call_friend">Call a Friend</string>
    <string name="prompt_call_111">Call 111</string>
    <string name="prompt_call_youthline">Call Youthline</string>
    <string name="prompt_call_lifeline">Call Lifeline</string>
    <string name="prompt_main_menu">Main menu</string>

    <string name="phone_number_111">111</string>
    <string name="phone_number_youthline">0800376633</string>
    <string name="phone_number_lifeline">0800543354</string>
    <string name="home_page_message">Hi there  Thank you very much for your interest in this project. Just click on any of the headings below to read more about this project and us.  The MoodRush Team </string>


</resources>
